--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -27,7 +27,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install .vscode\vs_requirements.txt
-    - name: Install pyproject
+    - name: Install swntools
       run: |
         pip install -e .
     - name: Check import order with isort
