--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,5 @@
 [metadata]
-name = cfg
+name = swntools
 version = 0.2
 url = https://github.com/tm-shad/SWN-Tools
 author = Troy Murray
@@ -18,6 +18,7 @@ install_requires =
     python_log_indenter
     dice
     inflect
+    discord.py
 
 [options.packages.find]
 where=src
@@ -27,10 +28,10 @@ console_scripts =
    swntools = swntools.swntools:run
 
 [flake8]
-ignore = E203, E266, E501, W503, F403, F401, B950, D202, D100, D104
+ignore = E203, E266, E501, W503, F403, F401, B950 #, D202, D100, D104
 max-line-length = 120
 max-complexity = 18
-select = B,C,D,E,F,W,N,T4,B9
+select = B,C,E,F,W,N,T4,B9 #D
 docstring-convention=google
 
 [isort]
